[workspace]
members = [
  "openmls",
  "traits",
  "openmls_rust_crypto",
  "libcrux_crypto",
  "cli",
  "memory_keystore",
  "delivery_service/ds",
  "delivery_service/ds-lib",
  "basic_credential",
  "authentication_service",
]
resolver = "2"

# Central dependency management for some crates
[workspace.dependencies]
tls_codec = { version = "0.4.2-pre.1", features = [
  "derive",
  "serde",
  "mls",
], git = "https://github.com/rustcrypto/formats" }
