[package]
name = "audit_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2"
akd = { version = "0.11.0", features = ["serde_serialization", "whatsapp_v1"] }
actix-rt = "2.0"
actix-web = "4"
ed25519-dalek = { version = "2.0", features = ["rand_core", "pkcs8", "alloc"] }
serde = "1.0"
der = {version = "0.7", features = ["derive", "alloc"]}
clap = "4"
futures-util = "0.3"
log = "0.4"
serde_json = "1.0"
pretty_env_logger = "0.5"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_qs = "0.13.0"

openmls = { path = "../openmls", features = ["test-utils"] }

as-lib = { path = "../authentication_service/as-lib/" }
openmls_rust_crypto = { path = "../openmls_rust_crypto" }
openmls_traits = { path = "../traits" }
openmls_basic_credential = { path = "../basic_credential" }

