[package]
name = "as-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
akd = { version = "0.11.0", features = ["serde_serialization", "whatsapp_v1"] }
openmls = { path = "../../openmls", features = ["test-utils"] }
openmls_traits = { path = "../../traits" }
openmls_rust_crypto = { path = "../../openmls_rust_crypto" }
openmls_memory_keystore = { path = "../../memory_keystore" }
openmls_basic_credential = { path = "../../basic_credential" }
serde = { version = "^1.0", features = ["derive"] }
ed25519-dalek = { version = "2.0", features = ["rand_core", "pkcs8", "alloc"] }
serde_json = "1.0"
hex = "0.4"
der = {version = "0.7", features = ["derive", "alloc"]}